--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 spring.application.name=gestion_biblio
+# =======================================
+# DATABASE CONFIGURATION
+# =======================================
+# L'URL de votre base de données. Assurez-vous que le nom de la BDD ('bibliotheque' par ex.) est correct.
+spring.datasource.url=jdbc:postgresql://localhost:5432/gestion_biblio
+spring.datasource.username=postgres
+spring.datasource.password=diary3103
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# =======================================
+# JPA/HIBERNATE CONFIGURATION
+# =======================================
+# Permet à Hibernate de dialoguer avec PostgreSQL
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Action à faire sur le schéma de la BDD au démarrage.
+# 'update' : met à jour la BDD selon vos entités. Parfait pour le développement.
+# 'validate' : vérifie juste que les tables correspondent aux entités.
+# 'none' : ne fait rien (recommandé en production).
+spring.jpa.hibernate.ddl-auto=update
+
+# Affiche les requêtes SQL générées dans la console (très utile pour le debug)
+spring.jpa.show-sql=true
